bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if ( 89<n<111|| 189<n<211) {
    return true;
  }
  else {
    return false;
  }
}